k8s/aqua-dash-web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aqua-dash-web-ingress
  namespace: aqua
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: aqua-dash.example.com
    http:
      paths:
        - path: /
          backend:
            serviceName: aqua-dash-web
            servicePort: 3000
        - path: /api
          backend:
            serviceName: aqua-web
            servicePort: 8080
  - host: aqua-web.example.com
    http:
      paths:
      - backend:
          serviceName: aqua-web
          servicePort: 8080
